--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -255,6 +255,11 @@
               <i class="app__menu-icon icon icon-bell"></i>
             </a>
           </li>
+          <li class="app__menu-item --chats">
+            <a href="#chat">
+              <i class="app__menu-icon icon icon-chat-bubble-duo"></i>
+            </a>
+          </li>
           <li class="app__menu-item --search" data-link="search">
             <a href="#search">
               <i class="app__menu-icon icon icon-search-zoom"></i>
@@ -793,6 +798,117 @@
         
     </section>
      <!-- Map end -->
+
+  <!-- Chat start -->
+  <div class="chat">
+    <div class="chat__close">
+      <i class="icon icon-cancel"></i>
+    </div>
+    <div class="chat-header">
+      <div class="chat-header__title">
+        <span data-lid="chat_header_title"></span>
+      </div>
+    </div>
+    <div class="chat-subheader">
+      <div class="chat-segment">
+        <div class="segment">
+          <div class="segment__part --active" data-link="all">
+            <h3 data-lid="chat_segment_all"></h3>
+          </div>
+          <div class="segment__part" data-link="hosted">
+            <h3 data-lid="chat_segment_hosted"></h3>
+          </div>
+          <div class="segment__part" data-link="requested">
+            <h3 data-lid="chat_segment_requested"></h3>
+          </div>
+        </div>
+      </div>
+      <div class="chat__filter-explanation">
+        <span data-lid="chat_segment_explanation"></span>
+      </div>
+    </div>
+    <div class="chat-rows">
+      <div class="chat-row --new">
+        <div class="chat-row-date">
+          <div class="chat-row-date__status">
+            <i class="icon icon-star"></i>
+          </div>
+          <div class="chat-row-date__day">
+            <span class="--day">25</span> <span class="--month">JAN</span>
+          </div>
+          <div class="chat-row-date__splitter"></div>
+          <div class="chat-row-date__hour">
+            <span class="--hour">22:30</span>
+          </div>
+        </div>
+        <div class="chat-row-pictures">
+          <div class="rosace">
+            <div class="rosace__part --left">
+              <img width="90" height="90" src="http://res.cloudinary.com/radioreve/image/upload/c_fill,g_face,h_90,w_90/v1462349307/102066130199795--0" data-scopeid="menu-row">
+            </div>
+            <div class="rosace__part --right">
+              <img width="90" height="90" src="http://res.cloudinary.com/radioreve/image/upload/c_fill,g_face,h_90,w_90/v1461000148/139048986496241--2" data-scopeid="menu-row">
+            </div>
+          </div>
+        </div>
+        <div class="chat-row-infos">
+          <div class="chat-row-infos-name">
+            <span class="--name"> Julie and co </span>
+            <span class="user-online --online"></span>
+          </div>
+          <div class="chat-row-infos__preview">
+            <span>Hey guys! I would like to help u join my little party, do you mind coming over please ! Pleaseeee</span>
+          </div>
+        </div>
+        <div class="chat-row-time">
+          <span>23:50</span>
+        </div>
+      </div>
+    </div>
+    <div class="chat-row">
+        <div class="chat-row-date">
+          <div class="chat-row-date__status">
+            <i class="icon icon-star"></i>
+          </div>
+          <div class="chat-row-date__day">
+            <span class="--day">25</span> <span class="--month">JAN</span>
+          </div>
+          <div class="chat-row-date__splitter"></div>
+          <div class="chat-row-date__hour">
+            <span class="--hour">22:30</span>
+          </div>
+        </div>
+        <div class="chat-row-pictures">
+          <div class="rosace">
+            <div class="rosace__part --left">
+              <img width="90" height="90" src="http://res.cloudinary.com/radioreve/image/upload/c_fill,g_face,h_90,w_90/v1462349307/102066130199795--0" data-scopeid="menu-row">
+            </div>
+            <div class="rosace__part --right">
+              <img width="90" height="90" src="http://res.cloudinary.com/radioreve/image/upload/c_fill,g_face,h_90,w_90/v1461000148/139048986496241--2" data-scopeid="menu-row">
+            </div>
+          </div>
+        </div>
+        <div class="chat-row-infos">
+          <div class="chat-row-infos-name">
+            <span class="--name">Léo and co </span>
+            <span class="user-online"></span>
+          </div>
+          <div class="chat-row-infos__preview">
+            <span>Hey guys! I would like to help u join my little party, do you mind coming over please ! Pleaseeee</span>
+          </div>
+        </div>
+        <div class="chat-row-time">
+          <span>23:50</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="chat-inview nonei">
+    
+  </div>
+  <!-- Chat end -->
+
+
 
      <!-- Search start -->
     <section class="app-section --search" data-link="search">
