--- a/public/css/src/before/before.css
+++ b/public/css/src/before/before.css
@@ -245,6 +245,7 @@
     width: 100%;
     box-sizing: border-box;
     flex-grow: 0;
+    position: relative;
 }
 .user-row:last-of-type {border-bottom: none;}
 .user-row__pic {
@@ -327,11 +328,11 @@
     background: #1B69EC;
     color: white;
 }
-.be-request button.--pending {background: white;color: #FD7124;border: 2px solid;}
+.be-request button.--pending {color: white;border: 2px solid;background: #FD7124;}
 .be-request button.--accepted {background: white;border: 2px solid;color: #1B69EC;}
 
 .be-request i {
-    font-size: 40px;
+    font-size: 36px;
 }
 
 .be-users .jspPane {
