--- a/public/css/src/notifications/notifications.css
+++ b/public/css/src/notifications/notifications.css
@@ -55,6 +55,7 @@
     box-shadow: 0px 12px 10px -10px rgb(232, 232, 232);
     border-bottom: 1px solid #eee;
     color: #454545!important;
+    width: 100%;
 }
 
 .notification--header__text {
