--- a/public/css/src/seek/seek.css
+++ b/public/css/src/seek/seek.css
@@ -108,6 +108,8 @@
     margin: 0px 0px;
     border-radius: 4px;
     color: #919191;
+    padding: 2px 10px;
+    font-family: 'Open sans';
 }
 
 .seek-map-browser-places .pac-item:first-of-type {
@@ -120,8 +122,9 @@
 
 .seek-map-browser-places .pac-item-query {
     color: black;
-    font-weight: 600;
-    font-size: 16px;
+    font-weight: 700;
+    font-size: 12px;
+    font-family: 'Open sans';
 }
 
 .seek-map-browser-places .pac-icon {
