--- a/public/css/src/chat/chat_inview.css
+++ b/public/css/src/chat/chat_inview.css
@@ -6,6 +6,20 @@
     padding: 0;
 }
 
+.chat-inview-messages .jspContainer {
+    width: 100%!important;
+}
+.chat-inview-messages .jspPane{
+    display: block;
+    width: 100%!important;
+}
+.chat-inview-messages .jspVerticalBar {right: 0px;width: 4px;}
+
+.chat-inview-messages .jspTrack {
+    
+}
+
+.chat-inview-messages .jspDrag {background: #D4D4D4;}
 .chat-inview {
     display: flex;
     flex-flow: column;
@@ -93,7 +107,7 @@
     font-weight: 800;
     text-align: center;
     font-size: 17px;
-    margin-bottom: 4px;
+    margin-bottom: 6px;
     height: 16px;
 }
 
@@ -111,8 +125,8 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    font-weight: 600;
-    color: #454545;
+    font-weight: 400;
+    color: #919191;
 }
 
 .chat-inview-title__address .--date {
@@ -123,19 +137,25 @@
 }
 
 .chat-inview-messages {
-    display: flex;
-    flex-flow: column;
     padding: 0px 20px 60px;
     margin-top: 10px;
-    height: 100%;
-    overflow: hidden;
+    height: 488px;
+    width: 100%!important;
+    outline: none;
 }
 
 .chat-inview-message {
     display: flex;
     align-items: flex-end;
     margin: 4px 0;
-    /* background: #eee; */
+    padding: 0 28px;
+    flex-shrink: 0;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.chat-inview-message.--pending {
+    opacity: .5;
 }
 
 .chat-inview-message.--left {
@@ -171,6 +191,7 @@
 .chat-inview-message.--me .chat-inview-message__bubble {
     background: #33afff;
     color: white;
+    background: #33AFFF;
     margin-right: -10px;
 }
 
@@ -246,18 +267,43 @@
     background: #f5f5f5;
     /* background: #eee; */
     color: #191919;
-    border-radius: 50px;
+    border-radius: 30px;
     padding: 10px 14px;
     font-size: 16px;
     font-weight: 400;
     margin: 1px 0;
     line-height: 20px;
-    margin-left: auto;
+    margin-right: auto;
 }
 
-.chat-inview.--team .chat-inview-message {}
+/* Positionning the messages in the right order - left/right - in chat inviews */
 
-.chat-inview.--all .chat-inview-message {}
+.chat-inview-message {
+    justify-content: flex-start;
+}
+.chat-inview-message-head {
+    order: 1;
+}
+.chat-inview-message-body {
+    order: 2;
+}
+
+.chat-inview-message.--me {
+    justify-content: flex-end;
+}
+
+.chat-inview-item.--all .chat-inview-message.--friend {
+    justify-content: flex-end;
+}
+.chat-inview-item.--all .chat-inview-message.--friend .chat-inview-message-head {
+    order: 2;
+}
+
+.chat-inview-item.--all .chat-inview-message.--friend .chat-inview-message-body {
+    order: 1;
+}
+
+
 
 .chat-inview-footer {
     height: 64px;
