--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -971,6 +971,7 @@
   <script src="js/src/before/before_realtime.js"></script>
   <script src="js/src/chat/chat.js"></script>
   <script src="js/src/chat/chat_inview.js"></script>
+  <script src="js/src/chat/chat_test.js"></script>
   <script src="js/src/friends/friends.js"></script>
   <script src="js/src/invite/invite.js"></script>
   <script src="js/src/ladder/ladder.js"></script>
