--- a/public/css/src/app/app_ux.css
+++ b/public/css/src/app/app_ux.css
@@ -23,6 +23,12 @@
     padding-top: 60px;
 }
 
+.hint {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
 /* App toasts */
 
 .toast {
