--- a/public/css/src/menu/menu.css
+++ b/public/css/src/menu/menu.css
@@ -145,7 +145,7 @@
 
 .segment {display: flex;justify-content: center;width: 100%;height: 34px;font-size: 16px;border-radius: 20px;border: 1px solid;box-sizing: border-box;}
 
-.segment__part {display: flex;/* border: 1px solid #454545; */height: 100%;width: 100%;cursor: pointer;transition: all ease-in-out .15s;}
+.segment__part {display: flex;height: 100%;width: 100%;cursor: pointer;transition: all ease-in-out .15s;}
 
 .segment__part.--active {
 	background: #454545;
