few fixes par ci par la

--- a/public/css/lib/nouislider/nouislider.css
+++ b/public/css/lib/nouislider/nouislider.css
@@ -93,8 +93,8 @@ left: -6px;
 	box-shadow: inset 0 1px 1px #f0f0f0;
 }
 .noUi-connect {
-	background: #33AFFF;
-	border: 1px solid #33AFFF;
+	background: #1B69EC;
+	border: 1px solid #1B69EC;
 	-webkit-transition: background 450ms;
 	transition: background 450ms;
 }
