--- a/public/css/src/settings/settings.css
+++ b/public/css/src/settings/settings.css
@@ -117,6 +117,7 @@
     margin: 0 20px;
     position: relative;
     color: #919191;
+    text-align: center;
 }
 
 .menu-section-submenu__item h4 {
