--- a/public/css/src/notifications/notifications.css
+++ b/public/css/src/notifications/notifications.css
@@ -12,7 +12,7 @@
     background: white;
     color: #191919;
     top: 54px;
-    box-shadow: 0px 0px 10px #B3B3B3;
+    box-shadow: 0px 2px 10px #B3B3B3;
     left: 50%;
     transform: translate(-50%, 0);
     z-index: 300;
@@ -28,7 +28,7 @@
     justify-content: flex-start;
     align-items: center;
     flex-direction: row;
-    height: 50px;
+    height: 54px;
     color: #191919;
     width: 95%;
     margin: 2px auto;
@@ -43,11 +43,11 @@
 
 .notification-click:hover {
     opacity: 1;
-    background: #F5F5F5;
+    background: #fbfbfb;
 }
 
 .notification--header {
-    height: 40px;
+    height: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -143,7 +143,7 @@ Whispereen 	: #58c170
 }
 
 .notification__date {
-    color: #33afff;
+    color: #1B69EC;
     font-size: 12px;
     margin-left: auto;
     font-weight: bolder;
