new signup/login part 1

--- a/public/css/lib/pikadate/pikadate.css
+++ b/public/css/lib/pikadate/pikadate.css
@@ -230,7 +230,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 
 .pika-button:hover {
     color: #fff;
-    background: #33afff!important;
+    background: #1b69ec!important;
     box-shadow: none;
     border-radius: 3px;
 }
