--- a/public/css/src/before/before_create.css
+++ b/public/css/src/before/before_create.css
@@ -135,7 +135,7 @@
 .hourpicker__hour:hover {
     color: white;
     font-weight: bold;
-    background: #33afff;
+    background: #1b69ec;
 }
 .hourpicker-col {
     margin: 0px 10px;
