--- a/public/css/src/friends/friends.css
+++ b/public/css/src/friends/friends.css
@@ -108,7 +108,7 @@
 
 }
 .friend-modal.--selected .friend-modal__icon {
-    background: #33AFFF;
+    background: #1B69EC;
 }
 .friend-modal.--selected .friend-modal__name {font-weight: 800;}
 
