--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -955,6 +955,7 @@
 
   <!-- custom scripts -->
   <script src="js/src/globals/globals.js"></script>
+  <script src="js/src/store/store.js"></script>
   <script src="js/src/router/router.js"></script>
   <script src="js/src/utils/utils.js"></script>
   <script src="js/src/api/api.js"></script>
